--- a/Tracer/public/index.html
+++ b/Tracer/public/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <!--
-Tinker CSS Template
-https://templatemo.com/tm-506-tinker
--->
     <title>Ethereum Token Tracer</title>
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -26,11 +22,8 @@ https://templatemo.com/tm-506-tinker
                     <a class="navbar-brand scroll-top" href="#"><em>Token</em> Tracer</a>
                 </div>
             </nav>
-            <!--/.navbar-->
         </div>
-        <!--/.container-->
     </div>
-    <!--/.header-->
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
@@ -38,7 +31,7 @@ https://templatemo.com/tm-506-tinker
                 <p>Token Tracer is a tool to trace ERC20 token you want. The token transfer history are provided by oraclize with Etherscan APIs. Please registe your token address first. Thank you.</p>
                 <p id="ct"></p>
                 <div class="primary-white-button">
-                    <a href="registe.html">Registe ERC20 Token</a> <!-- <a href="#" data-id="query">GO to view TRANSFER History!</a> -->
+                    <a href="registe.html">Register ERC20 Token</a>
                 </div>
                 <div class="primary-blue-button">
                     <a href="query.html">VIEW TRANSFER History !</a>
@@ -51,14 +44,10 @@ https://templatemo.com/tm-506-tinker
     <script src="javascripts/index.js">
     </script>
     <script>
-    /* DOM is ready
-           ------------------------------------------------*/
     $(function() {
-
         $.get('/ct', function(address) {
             $('#ct').text('@Token Tracer Control Tower at ' + address);
         })
-
     });
     </script>
 </body>
