--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -194,7 +194,7 @@
                 $('#oraclizeStatus').val('Running');
                 $('#oraclizeStatus').attr('style', 'background-color: #26D07C');
             } else {
-                $('#oraclizeStatus').val('Stop');
+                $('#oraclizeStatus').val('Pause');
                 $('#oraclizeStatus').attr('style', 'background-color: #E73C3E');
             }
 
