--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -64,10 +64,10 @@
                                     <label>Receiver</label> <input class="form-control" id="searchForReceiver" placeholder="Receiver Address" type="text">
                                 </div> -->
                                 <div class="form-group tm-form-group tm-form-group-pad tm-form-group-3">
-                                    <label class="label-group-3">Sync Block Height</label> <input class="form-control" id="tracerProgress" type="text" readonly>
+                                    <label class="label-group-3">Sync Block Height</label> <input class="form-control" id="syncBlock" type="text" readonly>
                                 </div>
                                 <div class="form-group tm-form-group tm-form-group-pad tm-form-group-3">
-                                    <label class="label-group-3">Sync Txn Count</label> <input class="form-control" id="tracerTransactionCount" type="text" readonly>
+                                    <label class="label-group-3">Sync Txn Count</label> <input class="form-control" id="syncTxnCount" type="text" readonly>
                                 </div>
                                 <div class="form-group tm-form-group tm-form-group-pad tm-form-group-3">
                                     <label class="label-group-3">Sync Status</label> <input class="form-control" id="oraclizeStatus" type="text" readonly>
@@ -188,8 +188,8 @@
 
         function updateInfo(result) {
             $('#tracerAddress').val(result.tracer);
-            $('#tracerProgress').text(result.tracerBlockHeight);
-            $('#tracerTransactionCount').text(result.tracerTransactionCount);
+            $('#syncBlock').val(result.tracerBlockHeight);
+            $('#syncTxnCount').val(result.tracerTransactionCount);
             if (result.oraclizeStatus) {
                 $('#oraclizeStatus').val('Running');
                 $('#oraclizeStatus').attr('style', 'background-color: #26D07C');
