--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -547,7 +547,7 @@
                                 cache: false,
                                 data: {
                                     tracerAddress: $('#tracerAddress').val(),
-                                    from: $('#from').val(),
+                                    account: $('#from').val(),
                                     searchType: 0,
                                     checkPoint: checkPoint
                                 },
@@ -565,7 +565,7 @@
                                 cache: false,
                                 data: {
                                     tracerAddress: $('#tracerAddress').val(),
-                                    to: $('#to').val(),
+                                    account: $('#to').val(),
                                     searchType: 1,
                                     checkPoint: checkPoint
                                 },
