--- a/Tracer/public/index.html
+++ b/Tracer/public/index.html
@@ -27,8 +27,8 @@
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2><em>TRACE</em> <span>TOKEN</span> YOU WANT !</h2>
-                <p>Token Tracer is a tool to trace ERC20 token you want. The token transfer history are provided by oraclize with Etherscan APIs. Please registe your token address first. Thank you.</p>
+                <h2><em>TRACING SERVICE</em> for <span>ERC-20 TOKEN</span> ! </h2>
+                <p>A-Decentralized-Digital-Currency-Tracing-Service is a service for you to trace the ERC20 tokens. The token transfer Txn are provided by Oraclize(Provable) with Etherscan APIs. Please register your token address first. Thank you.</p>
                 <p id="ct"></p>
                 <div class="primary-white-button">
                     <a href="registe.html">Register ERC20 Token</a>
