update type error

--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -415,7 +415,7 @@
                                         tracerAddress: $('#tracerAddress').val(),
                                         fromDate: (new Date($('#fromDate').val()).getTime()) / 1000,
                                         toDate: (new Date($('#toDate').val()).getTime()) / 1000,
-                                        user: $('#from').val(),
+                                        account: $('#from').val(),
                                         searchType: 0,
                                         checkPoint: checkPoint
                                     },
@@ -436,7 +436,7 @@
                                         tracerAddress: $('#tracerAddress').val(),
                                         fromDate: (new Date($('#fromDate').val()).getTime()) / 1000,
                                         toDate: (new Date($('#toDate').val()).getTime()) / 1000,
-                                        user: $('#to').val(),
+                                        account: $('#to').val(),
                                         searchType: 1,
                                         checkPoint: checkPoint
                                     },
@@ -493,7 +493,7 @@
                                         tracerAddress: $('#tracerAddress').val(),
                                         fromBlock: $('#fromBlock').val(),
                                         toBlock: $('#toBlock').val(),
-                                        user: $('#from').val(),
+                                        account: $('#from').val(),
                                         searchType: 0,
                                         checkPoint: checkPoint
                                     },
@@ -514,7 +514,7 @@
                                         tracerAddress: $('#tracerAddress').val(),
                                         fromBlock: $('#fromBlock').val(),
                                         toBlock: $('#toBlock').val(),
-                                        user: $('#to').val(),
+                                        account: $('#to').val(),
                                         searchType: 1,
                                         checkPoint: checkPoint
                                     },
