--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -35,11 +35,16 @@
                             <div class="form-row tm-search-form-row">
                                 <div class="form-group tm-form-group tm-form-group-1">
                                     <div class="form-group tm-form-group tm-form-group-pad tm-form-group-2">
-                                        <label class="label-group-2">ERC-20 Tokens</label> <select class="form-control tm-select" id="tokenList">
-                                        </select>
+                                        <label class="label-group-2" style="padding-top:35px;">ERC-20 Contracts</label><select class="form-control tm-select" id="tokenList"></select>
                                     </div>
                                     <div class="form-group tm-form-group tm-form-group-pad tm-form-group-2">
-                                        <label class="label-group-2">Txn Tracer Address</label> <input class="form-control" id="tracerAddress" type="text" readonly>
+                                        <div align="left" style="float:left;width:170px;">
+                                            <label class="label-group-2">Token Name</label> <input class="form-control" id="tokenName" type="text" readonly>
+                                        </div>
+                                        <div align="left" style="float:right;width:170px;">
+                                            <label class="label-group-2">Token Decimals</label> <input class="form-control" id="tokenDecimal" type="text" readonly>
+                                        </div>
+                                        <label class="label-group-2" style="padding-top:10px;">Txn Tracer Address</label> <input class="form-control" id="tracerAddress" type="text" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -166,6 +171,8 @@
 
         function updateInfo(result) {
             $('#tracerAddress').val(result.tracer);
+            $('#tokenName').val(result.tokenName);
+            $('#tokenDecimal').val(result.tokenDecimal);
             $('#syncBlock').val(result.syncBlock);
             $('#syncTxnCount').val(result.syncTxnCount);
             if (result.oraclizeStatus) {
