--- a/Tracer/public/query.html
+++ b/Tracer/public/query.html
@@ -99,8 +99,8 @@
                         <img src="stylesheets/query/img/search.png" class="search-icon" id="queryStartTime">
                         <div class="dialog" id="date_dialog">
                             <h3>Please pick up the date to query</h3>
-                            <p>fromDate : <input type="text" class="dialog_input" id="fromDate" value="Jul 30 2015" placeholder="Default: Jul 30 2015" /></p>
-                            <p>toDate : <input type="text" class="dialog_input" id="toDate" placeholder="Default: latest" /></p>
+                            <p>fromDate : <input type="text" class="dialog_input" id="fromDate" placeholder="Default: Jul 30 2015" readonly/></p>
+                            <p>toDate : <input type="text" class="dialog_input" id="toDate" placeholder="Default: latest" readonly/></p>
                         </div>
                     </li>
                     <li>From
@@ -139,7 +139,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css" />
     <script>
     $(function() {
-        $('.section_table').hide();
+        // $('.section_table').hide();
 
         // Smooth scroll to search form
         $('.tm-down-arrow-link').click(function() {
@@ -285,7 +285,7 @@
 
         // Date Picker in Search form
         var pickerFrom = datepicker('#fromDate');
-        var pickerTo = datepicker('#toDate');
+        var pickerFrom = datepicker('#toDate');
         $('#queryStartTime').click(function() {
             $('#date_dialog').dialog('open');
             e.preventDefault();
